fixed first slider button not showing up at center

--- a/scss/custom/pages/_index2.scss
+++ b/scss/custom/pages/_index2.scss
@@ -186,6 +186,21 @@
             background: rgba(41, 69, 125, 0.35);
           }
         }
+        .cta {
+          @include animationDelay(0.6s);
+          text-align: center;
+          margin-top: 60px;
+
+          a {
+            margin: 0px 20px;
+
+            @media (max-width: 767px) {
+              font-size: 14px;
+              padding: 12px 25px;
+              margin: 0px 15px 15px 0px;
+            }
+          }
+        }
 
         h1.hero-text {
           text-align: center;
